logs de errores.txt
  File "/app/gestor.py", line 5803
    return resultados
                     ^
IndentationError: unindent does not match any outer indentation level
[2025-09-15 08:42:48 +0000] [4] [INFO] Worker exiting (pid: 4)
[2025-09-15 08:42:48 +0000] [1] [ERROR] Worker (pid:4) exited with code 3
[2025-09-15 08:42:48 +0000] [1] [ERROR] Shutting down: Master
[2025-09-15 08:42:48 +0000] [1] [ERROR] Reason: Worker failed to boot.
[2025-09-15 08:42:49 +0000] [1] [INFO] Starting gunicorn 21.2.0
[2025-09-15 08:42:49 +0000] [1] [INFO] Listening at: http://0.0.0.0:8080 (1)
[2025-09-15 08:42:49 +0000] [1] [INFO] Using worker: sync
[2025-09-15 08:42:49 +0000] [4] [INFO] Booting worker with pid: 4
Ejecutando migraciones de base de datos...
[INFO] Tabla schema_migrations verificada o creada
No hay migraciones pendientes que aplicar.
Migraciones aplicadas con éxito
Ejecutando diagnóstico de base de datos...
=== DIAGNÓSTICO DE BASE DE DATOS ===
Motor: PostgreSQL
Tablas encontradas: schema_migrations, usuarios, stock_history, carrito, productos_manual, stock, proveedores_manual, proveedores_ocultos, proveedores_duenos, notificaciones, proveedores_meta, proveedores_eliminados, users
[OK] Todas las tablas requeridas existen
[OK] Tabla productos_manual tiene todas las columnas requeridas
[OK] Tabla proveedores_manual tiene todas las columnas requeridas
[OK] Tabla stock tiene todas las columnas requeridas
=== DIAGNÓSTICO COMPLETADO ===
[2025-09-15 08:42:49 +0000] [4] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/arbiter.py", line 609, in spawn_worker
    worker.init_process()
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 134, in init_process
    self.load_wsgi()
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/util.py", line 371, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/.nix-profile/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/app/wsgi.py", line 43, in <module>
    from gestor import app as application
  File "/app/gestor.py", line 5803
    return resultados
                     ^
IndentationError: unindent does not match any outer indentation level
[2025-09-15 08:42:49 +0000] [4] [INFO] Worker exiting (pid: 4)
[2025-09-15 08:42:49 +0000] [1] [ERROR] Worker (pid:4) exited with code 3
[2025-09-15 08:42:49 +0000] [1] [ERROR] Shutting down: Master
[2025-09-15 08:42:49 +0000] [1] [ERROR] Reason: Worker failed to boot.
[2025-09-15 08:42:50 +0000] [1] [INFO] Starting gunicorn 21.2.0
[2025-09-15 08:42:50 +0000] [1] [INFO] Listening at: http://0.0.0.0:8080 (1)
[2025-09-15 08:42:50 +0000] [1] [INFO] Using worker: sync
[2025-09-15 08:42:50 +0000] [4] [INFO] Booting worker with pid: 4
Ejecutando migraciones de base de datos...
[INFO] Tabla schema_migrations verificada o creada
No hay migraciones pendientes que aplicar.
Migraciones aplicadas con éxito
Ejecutando diagnóstico de base de datos...
=== DIAGNÓSTICO DE BASE DE DATOS ===
Motor: PostgreSQL
Tablas encontradas: schema_migrations, usuarios, stock_history, carrito, productos_manual, stock, proveedores_manual, proveedores_ocultos, proveedores_duenos, notificaciones, proveedores_meta, proveedores_eliminados, users
[OK] Todas las tablas requeridas existen
[OK] Tabla productos_manual tiene todas las columnas requeridas
[OK] Tabla proveedores_manual tiene todas las columnas requeridas
[OK] Tabla stock tiene todas las columnas requeridas
=== DIAGNÓSTICO COMPLETADO ===
[2025-09-15 08:42:50 +0000] [4] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/arbiter.py", line 609, in spawn_worker
    worker.init_process()
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 134, in init_process
    self.load_wsgi()
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/venv/lib/python3.11/site-packages/gunicorn/util.py", line 371, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/.nix-profile/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/app/wsgi.py", line 43, in <module>
    from gestor import app as application
  File "/app/gestor.py", line 5803
    return resultados
                     ^
IndentationError: unindent does not match any outer indentation level
[2025-09-15 08:42:50 +0000] [4] [INFO] Worker exiting (pid: 4)
[2025-09-15 08:42:50 +0000] [1] [ERROR] Worker (pid:4) exited with code 3
[2025-09-15 08:42:50 +0000] [1] [ERROR] Shutting down: Master
[2025-09-15 08:42:50 +0000] [1] [ERROR] Reason: Worker failed to boot.